--- a/Demanda/app/templates/produtos_demanda.html
+++ b/Demanda/app/templates/produtos_demanda.html
@@ -1,5 +1,71 @@
-{%
-    <body>
-        <h1>Produtos com Demanda</h1>
-    </body>
-%}
+<!DOCTYPE html>
+{% load static %}
+{% load meus_filtros %}
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{% url 'produtos_demanda' %}">Demanda de Protudos</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </nav>
+
+    <br>
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card card-body h-100">
+                    <h5 style="text-align:center">Cadastrar Produtos</h5>
+                    <hr>
+
+                    <form method="post"">
+                        <div class=" form-group">
+                        <label>Nome: </label>
+                        {{ form_produtos.nome|addclass:'form-control' }}
+                        <label>Tipo: </label>
+                        {{ form_produtos.tipo|addclass:'form-control' }}
+                        </div>
+                        <div class="form-group">
+                            <label>Marca: </label>
+                            {{ form_produtos.marca|addclass:'form-control' }}
+                        </div>
+                        <div class="form-group">
+                            <label>Tamanho: </label>
+                            {{ form_produtos.tamanho|addclass:'form-control' }}
+                        </div>
+                        <div class="form-group">
+                            <label>Quant: </label>
+                            {{ form_produtos.quantidade|addclass:'form-control' }}
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Salvar">
+                        </div>
+                    </form>
+
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card card-body h-100">
+                <h5 style="text-align:center">Produtos Salvos</h5>
+                <hr>
+                <p>Python, HTML/CSS, Docker, SQL, <p>
+                        <p>Obs: Estudando Django, Mongo DB e Data Science.</p>
+            </div>
+        </div>
+    </div>
+    </div>
+
+</body>
+
+</html>
