--- a/Demanda/app/templates/produtos_demanda.html
+++ b/Demanda/app/templates/produtos_demanda.html
@@ -5,6 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
@@ -12,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'produtos_demanda' %}">Demanda de Protudos</a>
+        <a class="navbar-brand" href="{% url 'produtos_demanda' %}">Demanda de Produtos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,6 +31,7 @@
                     <hr>
 
                     <form method="post"">
+                        {% csrf_token %}
                         <div class=" form-group">
                         <label>Nome: </label>
                         {{ form_produtos.nome|addclass:'form-control' }}
